app/static/style.css
/* regular styles */

p, h1,h2,h3,h4,h5,h6 { 
  overflow-wrap: break-word;
  word-wrap: break-word;

}


/* admin dashboard*/

.dashboard_container{
  padding: 16px;
  display: flex;
  flex-wrap: wrap;
}

.dashboard_item {
  min-width: 200px;
  background: white;
  margin: 16px;
  padding: 24px;
}


/* feedback button */
.feedback {
  cursor: pointer;
  background: none;
  border: none;
}
/* end feedback button  */

.loading {
  display: flex;
  flex-wrap: wrap;
  height: 100%;
  text-align: center;
  justify-content: center;
  align-content: center;
  padding-top: 80px;
}

.loading p {
  color: #424242;
  width: 100%;
}


body, #base-main {
  padding: 0;

}



.articles-empty-row,
.lurnby-empty-row {
  display: flex;
  justify-content: center;
}

.lurnby-empty-col,
.articles-empty-col {
  margin-top: 32px; 
  background: white;
  padding: 24px;
  border: #424242 2px solid;
}

@media(min-width:768px){
  .lurnby-empty-col,
  .articles-empty-col{
    max-width: 450px;
    padding: 48px;
  }
}


.tagged:focus, .untagged:focus, .main-button:focus, 
.input[type=checkbox]:focus + label{
  color: white;
  background: #424242;
}

.main-button{
  color: #424242;
  background: #F9F7F4;
  border-radius:0;
  margin: 0 0 0 16px;
  padding: 8px 16px;
  border: none;
}

.main-button:hover{
  color: white;
  background: #424242;

}
.main-section {
  padding: 24px;
  padding-left:24px;
}

.main-col {
  padding: 0;
}

.data {
  padding-left: 0;
}

#flashMessages{
  position: fixed;
  top: 52px;
  right: 0;
  left: 0;
  z-index: 1030;
  padding: 8px;
  display: flex;
  justify-content: center;
  }

  #flashMessages .alert {
    width: 90vw;
  }

  #flashMessages .close {
    position: absolute;
    top: 8px;
    right: 8px;
  }

.alert {
  margin: 0;
  border-radius: 0;
}


/* filter styles */

.filter-dropdown svg {
  pointer-events: none;
}

.filter-col {
  margin-top:8px;
  width: 100%;
}

.apply-filter {
  width: 100%;
  text-align: right;
}

.filter-topic.tagged {
  background: #FAB1A0;
}

.filter-topic.untagged:hover {
    background: #FAB1A0;

}

.tags .heading {
  margin-bottom: 0;
}

#active_filters .heading {
  align-items: center;
  flex-wrap: wrap;
}

#active_filters .heading h4 {
  margin-right: 8px;
}

.tags {
  margin-bottom: 16px;
}

.filter input[type=checkbox]{
    width: 0.1px;
	  height: 0.1px;
	  opacity: 0;
	  overflow: hidden;
	  position: absolute;
	  z-index: -1;
}

.filter input[type=checkbox]:focus + label {
  background: #424242;
  color: white;
}


.filter .dropdown-menu {
  margin: 0;
  border-radius: 0;
  border: #424242 1px solid;
  overflow-y: scroll;
  min-width: 220px;
  max-width: 600px;
  transform: translate3d(0px, 40px, 0px)!important;
}

.filter-dropdown {
  background: #FFF79F;
}
 

.filter form {
  padding: 8px;
  display: flex;
  flex-wrap: wrap;
}

.filter form .save,
.main-form .save{
  
  margin-top: 8px;
  margin-right: 0;
  margin-left: auto;
}

.filter .main-button {
  margin-left: 0;
}

#active_filters{
  margin-top: 8px;
}

@media (min-width:768px){
  .filter .dropdown-menu {
    min-width: 450px;
  }
}

/*      end filters        */

/* Article reading styles  - text.html */

/*  general styles  */
#standard {
  display: flex;
  flex-wrap: wrap;
  padding: 36px 0;
}

#standard img {
  max-width: 100% !important;
}

#content{
  max-width:100%;
  padding: 0 88px;
}

.twrap{
  overflow: auto;
}


Generic Styling, for Desktops/Laptops 
*/
table { 
  width: 100%; 
  border-collapse: collapse; 
}
/* Zebra striping */
tr:nth-of-type(odd) { 
  background: #eee; 
}
th { 
  background: #333; 
  color: white; 
  font-weight: bold; 
}
td, th { 
  padding: 6px; 
  border: 1px solid #ccc; 
  text-align: left; 
}





#bottom-bar{
  width: 100%;
}

#sidebar {
  position: fixed;
  display: flex;
  flex-wrap: wrap;
  max-width: 50px;
}


.action-button{
  background: none;
  border: none;
  padding: 8px 16px;
  margin-left: 16px;
}

.action-button:hover {
  background: rgba(0,0,0, .5);
  color: white;
}


/* type controls */

#type-controls {
  position: fixed;
  height: auto;
  padding: 16px 24px;
  display:none;
  top: 75px;
  left: 80px;
}

#notes-form {

  position: fixed;
  height: auto;
  padding: 16px 24px;
  display:none;
  top: 115px;
  left: 80px;

}

#notes-form::after{
  top: 0;
  margin-top: 10px;

}



#type-controls::after {
  top: 4%;
}

.dark-control-mode::after {
	right: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
  border-right-color: #4c4a50;
	border-width: 12px;
	margin-top: -8px;

}

.sepia-control-mode::after {
	right: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-right-color: white;
	border-width: 12px;
	margin-top: -8px;

}
.light-control-mode::after {
	right: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
  border-right-color: #F9F7F4;
	border-width: 12px;
	margin-top: -8px;

}




#type-controls .form-group{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}


#type-controls input[type="radio"],  #type-controls input[type="range"]{
  display: none;
}

#type-controls label {
  cursor: pointer;
  
}

.type-controls-button{
  padding: 4px 12px;
  margin-right: 8px;

}

label svg {
 fill: #424242;
}


#type-controls input[type="radio"]:checked+ label svg {
fill: #FAB1A0;
}

#type-controls input[type="radio"]:checked+ .color-selector,
#type-controls input[type="radio"]:checked+ .font-selector{
border: #FAB1A0 2px solid;
}

.color-selector {
  font-size: 0.8rem;
  border: rgba(0,0,0, .1) 1px solid;

}

.font-selector:hover,.color-selector:hover {
  -webkit-box-shadow: 0px 4px 0px -0.4px rgba(250,177,160,1);
  -moz-box-shadow: 0px 4px 0px -0.4px rgba(250,177,160,1);
  box-shadow: 0px 4px 0px -0.4px rgba(250,177,160,1);
}

.light-control-mode {
  color: #424242;
  background-color: #F9F7F4;
}
/* ... */

